# rust-cli

./: .gitignore  Cargo.toml  Readme.md
src/: fetch_notice.rs  main.rs  pomodoro.rs
src/lib/: dotenv.rs
