[package]
name = "ulsan_bus"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.14"
tokio = { version = "1", features = ["full"] }

serde_json = "1.0"
chrono = "0.4"

dotenv = "0.15"

rustyline = "11.0"

crossterm = "0.25"
rand = "0.8.5"